# clickhouse-wrapper

./: README.md  pyproject.toml
clickhouse_wrapper/: __init__.py  clickhouse_client.py  clickhouse_function.py
