[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clickhouse-wrapper"
version = "0.1.0"
authors = [
    {name = "ctilab-jho", email = "jho@ctilab.co.kr"}
]
dependencies = [
    "clickhouse-connect>=0.8.14",
    "pandas"
]
requires-python = ">=3.8"